# creatie-nft

DCreate-backend/: README.md  dfx.json
DCreate-backend/script/: init.sh
DCreate-backend/script/ic_create_call/: Cargo.toml
DCreate-backend/script/ic_create_call/src/: canister.rs
DCreate-backend/src/NFT/: priNFT.mo  pubNFT.mo
DCreate-backend/src/common/: AccountIdentifier.mo  types.mo
DCreate-front/: .env.test  .eslintrc.js  .prettierrc  package.json  postcss.config.js
DCreate-front/.husky/: commit-msg
DCreate-front/config/: webpack.config.js
DCreate-front/public/: index.html
DCreate-front/scripts/: build.js
DCreate-front/src/: Router.js  ViewportProvider.js  icons.js  index.js  index.less  message.js
DCreate-front/src/api/: axios.js  canisterManager.js  createHandler.js  handler.js  httpRequest.js  mintHandler.js  userHandler.js
DCreate-front/src/assets/scripts/: backgroundColor.js  (+1 more)
DCreate-front/src/store/: index.js  reducer.js
DCreate-front/src/utils/: ColorUtils.js
craetie/: .gitignore  README.md
craetie/.husky/: pre-commit
craetie/config/: env.js
craetie/src/: App.js  App.less  constants.js  type.d.ts
craetie/src/api/: canvasHandler.js  infinity.js  nftHandler.js  plug.js  zombieHandler.js
craetie/src/ic/: RosettaApi.js
craetie/src/utils/: utils.js
craetie_backend/: README.md  canister_ids.json
craetie_backend/script/ic_create_call/: collections.json
craetie_backend/src/NFT/: NFT.mo  forkNFT.mo  storage.mo
craetie_backend/src/common/: Hex.mo  nftTypes.mo
craetie_backend/src/factory/: NFTFactory.mo
(+238 files in other folders)
