[package]
name = "ic_create_call"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = {git = "https://github.com/edddyguo/candid", rev = "f3b09342f99630fe7a9b93f5bdd7eadb579de82f"}
ic-agent = "0.10.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
ring = "0.16.20"
garcon = "0.2.3"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
png = "0.17.2"
env_logger = "0.7.1"
chrono = "0.4"
log = "0.4.8"
lazy_static = "1.4.0"
anyhow = "1.0.41"
rayon = "1.3.0"
async-std = { version = "1.8.0", features = [ "attributes" ] }
paw = "1.0"
mysql = "*"
clap = "=3.0.0-beta.5"
image = "0.23.14"
rand = "0.8.4"
imageproc = "0.22.0"
rusttype = "0.9.2"
config = "0.13.1"
